# impostare

./: .gitignore  Cargo.toml  connection_details  db.toml  devenv.nix  flake.nix
.github/workflows/: test.yml
src/: config.rs  functions.sql  main.rs  statement.rs
