[package]
name = "impostare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
log = "0.4.21"
postgres = "0.19.7"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
